--- a/index4.html
+++ b/index4.html
@@ -307,7 +307,7 @@
         // UPDATE THIS ARRAY with your actual media files
         // Each item should have the same name but different extensions
         const mediaFiles = [
-            'sintel',           // This will look for sintel.jpg and sintel.torrent
+            'The Fantastic Four First Steps (2025)',           // This will look for sintel.jpg and sintel.torrent
             'big_buck_bunny',   // This will look for big_buck_bunny.jpg and big_buck_bunny.torrent
             'tears_of_steel'    // Add more items as needed
         ];
