--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
         window.webtor = window.webtor || [];
         window.webtor.push({
             id: 'player',
-            magnet: 'magnet:?xt=urn:btih:08ada5a7a6183aae1e09d831df6748d566095a10&dn=Sintel&tr=udp%3A%2F%2Fexplodie.org%3A6969&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.empire-js.us%3A1337&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337&tr=wss%3A%2F%2Ftracker.btorrent.xyz&tr=wss%3A%2F%2Ftracker.fastcast.nz&tr=wss%3A%2F%2Ftracker.openwebtorrent.com&ws=https%3A%2F%2Fwebtorrent.io%2Ftorrents%2F',
+            magnet: 'magnet:?xt=urn:btih:7446YHBLXJ6M5YUZ3JGI3DSE6N5ZERZW&dn=The%20Fantastic%20Four%20First%20Steps%20(2025)%20%5B720p%5D%20%5BWEBRip%5D%20%5BYTS.MX%5D&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce',
             poster: 'https://via.placeholder.com/150/0000FF/808080',
             subtitles: [
                 {
